[tool.poetry]
name = "random-nlp"
version = "0.1.0"
description = ""
authors = ["andrejcyrkunov <a.tsyrkunov@flipperdevices.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
natasha = "^1.6.0"
notebook = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

